<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/EditColor">
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/action_sign_in"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:textColor="@color/ForeColor"
            android:text="@string/welcome" />


        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_shape_user_rectangle"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/BorderColor"
            android:textColorHint="@color/BorderColor"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_shape_user_rectangle"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/BorderColor"
            android:textColorHint="@color/BorderColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/ForeColor"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/forget_password"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@null"
                android:text="@string/forget_password"
                android:textColor="#c1c4d6" />

            <Button
                android:id="@+id/register"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:gravity="center|end"
                android:text="@string/register"
                android:textColor="#c1c4d6" />


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>