<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/EditColor"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">



        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_shape_user_rectangle"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/BorderColor"
            android:textColorHint="@color/BorderColor"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_shape_user_rectangle"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/BorderColor"
            android:textColorHint="@color/BorderColor"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_shape_user_rectangle"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/BorderColor"
            android:textColorHint="@color/BorderColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/Button"
            android:text="@string/prompt_register"
            android:textColor="@color/white"
            android:textSize="16sp" />



    </LinearLayout>

</LinearLayout>